add bosyu delete tests
