# handler/handler.go
@@ -21,7 +21,7 @@ import (
 // @Failure 400 {object} echo.HTTPError
 // @Router /api/bosyu/create [post]
 func CreateBosyu(c echo.Context) error {
-	if CheckHasLogined(c) == false {
+	if checkHasLogined(c) == false {
 		return &echo.HTTPError{
 			Code: http.StatusNotFound,
 			Message: "can't find login user.",
@@ -55,7 +55,7 @@ func CreateBosyu(c echo.Context) error {
 // @Failure 400,404 {object} echo.HTTPError
 // @Router /api/bosyu/get [get]
 func GetBosyu(c echo.Context) error {
-	if CheckHasLogined(c) == false {
+	if checkHasLogined(c) == false {
 		return &echo.HTTPError{
 			Code: http.StatusNotFound,
 			Message: "can't find login user.",
@@ -81,8 +81,16 @@ func GetBosyu(c echo.Context) error {
 	return c.JSON(http.StatusOK, bosyus)
 }
 
+// UpdateBosyu is updating bosyu.
+// @Summary create bosyu
+// @Description update bosyu in a group
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} model.Bosyu
+// @Failure 400,404 {object} echo.HTTPError
+// @Router /api/bosyu/update [put]
 func UpdateBosyu(c echo.Context) error {
-	if CheckHasLogined(c) == false {
+	if checkHasLogined(c) == false {
 		return &echo.HTTPError{
 			Code: http.StatusNotFound,
 			Message: "can't find login user.",
@@ -111,21 +119,46 @@ func UpdateBosyu(c echo.Context) error {
 	}
 	return c.JSON(http.StatusOK, bosyu)
 }
-//
-//func DeleteBosyu(c echo.Context) error {
-//	// JWTを入れた際にはロジック追加
-//	bosyu_id, err := strconv.ParseUint(c.QueryParam("id"), 10, 32)
-//
-//	if err != nil {
-//		return echo.ErrNotFound
-//	}
-//
-//	model.DeleteBosyu(uint(bosyu_id))
-//
-//	return c.NoContent(http.StatusNoContent)
-//}
 
-func CheckHasLogined(c echo.Context) bool {
+
+// DeleteBosyu is deleting bosyu.
+// @Summary delete bosyu
+// @Description delete bosyu in a group
+// @Accept  json
+// @Produce  json
+// @param bosyu_id query string true "bosyu_id which bosyu has"
+// @Success 200 {object} model.Bosyu
+// @Failure 400,404 {object} echo.HTTPError
+// @Router /api/bosyu/delete [delete]
+func DeleteBosyu(c echo.Context) error {
+	if checkHasLogined(c) == false {
+		return &echo.HTTPError{
+			Code: http.StatusNotFound,
+			Message: "can't find login user.",
+		}
+	}
+
+	bosyu_id, err := strconv.ParseUint(c.QueryParam("bosyu_id"), 10, 32)
+
+	if err != nil {
+		return &echo.HTTPError{
+			Code:    http.StatusBadRequest,
+			Message: "invalid bosyu id parameter",
+		}
+	}
+
+	err = model.DeleteBosyu(uint(bosyu_id), db.DB)
+	if err != nil {
+		return &echo.HTTPError{
+			Code:    http.StatusNotFound,
+			Message: err,
+		}
+	}
+
+	return c.NoContent(http.StatusNoContent)
+}
+
+func checkHasLogined(c echo.Context) bool {
 	uid := userIDFromToken(c)
 	if user := model.FindUser(&model.User{Model: gorm.Model{ID: uid}}, db.DB); user.ID == 0 {
 		return false
